Use `get(0)` to support java 17 language features. Remove log Remove extra check outside render frame